--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+# Digital Screening Architecture Current View
+
 This is a high level diagram of all of the software systems that the Digital Screening programme is responsible for, and some of the external systems that those systems interact with.
 
 This is using [Structurizr](https://structurizr.com/) DSL.
@@ -5,17 +7,19 @@ This is using [Structurizr](https://structurizr.com/) DSL.
 Setup:
 
 ```
-docker pull structurizr/lite
+make install
 ```
 
-Run:
+Build static site:
 
 ```
-docker run -it --rm -p 8080:8080 -v .:/usr/local/structurizr structurizr/lite
+make build
+```
+
+Run local server
+
+```
+make serve
 ```
 
 Visit http://localhost:8080
-
-Contributing:
-
-Please contibute with a PR. You will need to manually update the workspace.svg image by downloading it from the structurizr lite web interface.
